styles.css
@media (max-width: 500px) {
   body { /*This is my peach colored background*/
    background-color: hsl(30, 38%, 92%);
    width: 100%;
    margin: auto;
    padding-top: 5%;
    padding-bottom: 5%;
}

.background { /*This is my white background*/
    display: flex;
    flex-direction: column;
    background-color: #ffffff;
    width: 85%;
    height: 780px;
    border-radius: 10px;
    margin: auto; 
}

.content {  /*This is my img, titles, and description*/
    display: flex;
    flex-wrap: nowrap;
    flex-direction: column;
}

.mobile-img { /*This is my img only*/
    width: 100%;
    height: 300px;
    border-radius: 10px 10px 0 0;
} 

.copy {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
}

.perfume { /*This is my product category type title*/
    font-family: "Montserrat", san serif;
    color: hsl(228, 12%, 48%);
    margin-left: 30px;
    margin-top: 25px;
    margin-bottom: 12px;
    letter-spacing: .3rem;
    font-size: 18px;
}

.name-title { /*This is my product brand title*/
    font-size: 40px;
    font-family: "Fraunces", san serif;
    justify-content: left;
    margin-left: 30px;
    margin-top: 0;
    margin-bottom: 15px;
    line-height: 3rem;
}

.description { /*This is my description of product*/
    font-size: 20px;
    line-height: 1.8rem;
    font-family: "Montserrat", san serif;
    color: hsl(228, 12%, 48%);
    margin-top: 0;
    margin-left: 30px;
    margin-right: 10px;
    flex-wrap: wrap;
    margin-bottom: 30px; 
}

.pricing {
    display: flex;
    flex-direction: row; 
}

.discount { /*This is my product discount price*/
    color: hsl(158, 36%, 37%);
    font-family: "Fraunces", san serif;  
    font-size: 40px;
}

.regular { /*This is my product regular price*/
    font-size: 20px;
    color: hsl(228, 12%, 48%);
    font-family: "Fraunces", san serif;
    margin-left: 20px;
    margin-top: 12px;
    padding-bottom: 4px;
    display: inline;
}

.cart {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: center;
    padding-bottom: 25px;
    margin-top: 0px;
}


#cart { /*This is my button*/
    background-color: hsl(158, 36%, 37%);
    font-family: "Montserrat", san serif;
    font-weight: 900;
    color: white;
    font-size: 18px;;
    border-radius: 5px;
    border: none;
    padding: 20px; 
    width: 350px;
    max-width: 100%;
}

button {
    text-align: center;
}

#cart:hover {
    background-color: hsl(141, 49%, 19%);
    color: hsl(0, 0%, 100%);
    cursor: pointer;
}

.fa-solid fa-cart-shopping {
    color: #ffffff;      
}

i {
    margin-right: 10px;
}

.large-img {
    display: none;
}
}

/*Below is for screens larger (desktop/tablet)*/


@media (min-width: 501px) {

    body {
    background-color: hsl(30, 38%, 92%);
    width: 100%;
    margin: auto;
}

.background { 
    background-color: #ffffff;
    border-radius: 10px;
    width: 30%;
    max-height: 100%;
    margin: auto;
    margin-top: 10%;
    display: flex;
    align-items: center;
   
}

.content {  /*This is my img, titles, and description*/
   display: flex;
}

.large-img { /*This is my large img only*/
    width: 50%;
    height: 100%;
    border-radius: 10px 0px 0 10px;
}

.mobile-img { /*Large Photo*/
    display: none;
}

.copy {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    margin-left: 32px;
    width: 40%;

}

.perfume { /*This is my product category type title*/
    font-family: "Montserrat", san serif;
    color: hsl(228, 12%, 48%);
    letter-spacing: .2rem;
    font-size: 12px;
    margin-bottom: 0;
}

.name-title { /*This is my product brand title*/
    font-size: 30px;
    font-family: "Fraunces", san serif;
    justify-content: left;
    margin-bottom: 0;
    margin-top: 0;
}

.description { /*This is my description of product*/
    font-size: 1em;
    font-family: "Montserrat", san serif;
    font-weight: 500, 700;
    color: hsl(228, 12%, 48%);
    margin-top: 0;
    letter-spacing: .1rem;
}

.pricing-box {
    
}

.discount { /*This is my product discount price*/
    color: hsl(158, 36%, 37%);
    font-family: "Fraunces", san serif;
    font-size: 2em;
    display: inline;
}

.regular { /*This is my product regular price*/
    font-size: 14px;
    color: hsl(228, 12%, 48%);
    font-family: "Fraunces", san serif;
    display: inline;
    margin-left: 1em;
}

.cart {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: center;
    padding-bottom: 25px;
    margin-top: 0px;
}


#cart { /*This is my button*/
    background-color: hsl(158, 36%, 37%);
    font-family: "Montserrat", san serif;
    font-weight: 900;
    color: white;
    font-size: 16px;
    width: 330px;
    border-radius: 5px;
    border: none;
    padding: 10px; 
}

button {
    text-align: center;
}

#cart:hover {
    background-color: hsl(30, 38%, 92%);
    color: hsl(158, 36%, 37%);
    cursor: pointer;
}

.fa-solid fa-cart-shopping {
    color: #ffffff;      
}

i {
    margin-right: 10px;
}


@media screen (min-width: 1020px) {
    body {
        background-color: red;
    }
}

